# UWLCM

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_singularity.md  build_instructions.md  build_instructions.rtf  build_instructions.txt  git_revision.h  kompilacja.sh  libcloud_mpi_test.cpp  sng_ubuntu_18_04_cuda_10_0  uwlcm-config.cmake.in
.travis_scripts/: drawbicyc.sh  moist_thermal.sh  (+5 more)
drawbicyc/: CMakeLists.txt  Dycoms_comparison_common.py  Dycoms_precip_comparison_with_bins.py  Dycoms_profiles_comparison.py  Dycoms_series_comparison.py  Plotter2d.hpp  Plotter3d.hpp  PlotterCommon.hpp  PlotterMicro.hpp  average.cpp  bins.hpp  common.hpp  common_filters.hpp  compile.sh  drawbicyc.cpp  gnuplot.hpp  gnuplot_series_set_labels.hpp  notice_macros.hpp  plot_fields.hpp  plot_lgrngn_spec.hpp  plot_prof.hpp  plot_qv_qc_2_6_10_min.hpp  plot_series.hpp  plot_series_compare.cpp  plots.hpp  tmp
drawbicyc/DYCOMS_RF02_results/: .readme.txt.swp  readme.txt
drawbicyc/paraview_scripts/: DYCOMS_animation.py  make_plots_0_720.sh  merge_and_process_plots_0_720.sh  paraview_DYCOMS_init_state.pvsm
drawbicyc/src/: CMakeLists.txt  Plotter2d.hpp  Plotter3d.hpp  common.hpp  common_filters.hpp  drawbicyc.cpp  plot_prof.hpp  plot_series.hpp
src/: .bicycles.cpp.swp  CMakeLists.txt  DYCOMS98.hpp  ThermalGrabowskiClark99.hpp  bicycles.cpp  calc_forces.hpp  calc_forces_blk_1m.hpp  calc_forces_common.hpp  common_headers.hpp  concurr_types.hpp  forcings.hpp  opts_blk_1m.hpp  opts_blk_2m.hpp  opts_lgrngn.hpp  run_hlpr.cpp  run_hlpr.hpp  run_hlpr_2d_blk_1m.cpp  run_hlpr_2d_blk_1m_ice.cpp  run_hlpr_2d_blk_2m.cpp  run_hlpr_2d_lgrngn.cpp  run_hlpr_2d_none.cpp  run_hlpr_3d_blk_1m.cpp  run_hlpr_3d_blk_1m_ice.cpp  run_hlpr_3d_blk_2m.cpp  run_hlpr_3d_lgrngn.cpp  run_hlpr_3d_none.cpp  setup.hpp  slvr_blk_1m.hpp  slvr_blk_2m.hpp  slvr_common.hpp  slvr_dim.hpp  slvr_lgrngn.hpp  slvr_piggy.hpp  slvr_sgs.hpp  uwlcm.cpp
src/cases/: Anelastic.hpp  BOMEX03.hpp  CasesCommon.hpp  ContrailCLEAN.hpp  Convection.hpp  ConvectionWithIce.hpp  CumulusCongestus.hpp  CumulusCongestusCommon.hpp  CumulusCongestus_icmw20.hpp  CumulusCongestus_icmw24.hpp  DYCOMS.hpp  DYCOMS98.hpp  DYCOMS_RF01.hpp  DYCOMS_RF02.hpp  DaytimeConvectionLBA.hpp  DryPBL.hpp  DryThermalGMD2015.hpp  DryThermalWojtekCompare.hpp  ICMW2020_cumulus_congestus.hpp  LasherTrapp2001.hpp  MoistThermalGrabowskiClark99.hpp  PiChamberICMW2020.hpp  PiChamberICMW2024.hpp  RICO11.hpp  Rico.hpp  common.hpp
src/cases/CAMP2EX_sounding/: input_sounding_camp2ex_000907-pbl4.hpp
src/cases/ICMW2020_cumulus_congestus_sounding/: x7221545.adjdec2.hpp
src/cases/LasherTrapp2001_sounding/: x7221545.adjdec2  x7221545.adjdec2.hpp
src/cases/detail/: api_test.hpp  formulas.hpp
src/cases/detail/CAMP2EX_sounding/: aerosol_profile_factor.hpp  input_sounding_camp2ex_000907-pbl4.hpp
src/cases/obsolete/: DryThermalWojtekCompare.hpp
src/detail/: ForceParameters.hpp  bins.hpp  blitz_hlpr_fctrs.hpp  ccn_distribution.hpp  checknan.cpp  concurr_types.hpp  ct_params.hpp  exec_timer.hpp  func_time.hpp  get_uwlcm_git_revision.cpp  get_uwlcm_git_revision.hpp  libcloudphxx_functors.cpp  panic.hpp  profiles.hpp  setup.hpp  subs_t.hpp  user_params.hpp
src/forcings/: buoyancy.hpp  calc_forces_blk_1m.hpp  calc_forces_blk_2m.hpp  calc_forces_common.hpp  coriolis.hpp  forcings.hpp  large_scales.hpp  nudging.hpp  radiation.hpp  relax_th_rv.hpp  subsidence.hpp  surface_fluxes.hpp
src/formulae/: nabla_formulae.hpp  stress_formulae.hpp
src/opts/: opts_blk_1m.hpp  opts_blk_1m_ice.hpp  opts_blk_2m.hpp  opts_common.cpp  opts_common.hpp  opts_dry.hpp  opts_lgrngn.hpp
src/plot_lgrngn/: CMakeLists.txt  Plotter2d.hpp  Plotter3d.hpp  PlotterCommon.hpp  hdf5.hpp  plot_series.cpp
src/solvers/: slvr_blk_1m.hpp  slvr_blk_1m_ice.hpp  slvr_blk_2m.hpp  slvr_common.hpp  slvr_dim.hpp  slvr_dry.hpp  slvr_lgrngn.hpp  slvr_lgrngn_chem.hpp  slvr_piggy.hpp  slvr_sgs.hpp
src/solvers/blk_1m/: calc_forces_blk_1m.hpp  calc_forces_blk_1m_common.hpp  slvr_blk_1m_common.hpp  update_rhs_blk_1m_common.hpp
src/solvers/blk_1m_ice/: calc_forces_blk_1m_ice_common.hpp  slvr_blk_1m_ice_common.hpp  update_rhs_blk_1m_ice_common.hpp
src/solvers/blk_2m/: calc_forces_blk_2m_common.hpp  slvr_blk_2m_common.hpp  update_rhs_blk_2m_common.hpp
src/solvers/common/: calc_forces_common.hpp
src/solvers/lgrngn/: diag_lgrngn.hpp  hook_ante_delayed_step_lgrngn.hpp  hook_ante_loop_lgrngn.hpp  hook_ante_step_lgrngn.hpp  hook_mixed_rhs_ante_step_lgrngn.hpp  hook_post_step_lgrngn.hpp  init_prtcls.hpp  step_cond.hpp  sync_e2l.hpp  sync_in.hpp  update_rhs_lgrngn.hpp
src/solvers/lgrngn_chem/: diag_lgrngn_chem.hpp  hook_ante_delayed_step_lgrngn_chem.hpp  hook_ante_loop_lgrngn_chem.hpp  hook_mixed_rhs_ante_step_lgrngn_chem.hpp  init_prtcls_chem.hpp  step_cond_chem.hpp  sync_e2l_chem.hpp  sync_in_chem.hpp
tests/: CMakeLists.txt
tests/DYCOMS2D/: CMakeLists.txt  calc.cpp  calc_dycoms_rf01.cpp  calc_dycoms_rf02.cpp  gnuplot.hpp  hdf5.hpp  plot_blk_1m.cpp  plot_blk_2m.cpp  plot_lgrngn.cpp  plot_lgrngn_mean_spec.cpp  plot_lgrngn_prof.cpp  plot_lgrngn_prof_ensamble.cpp  plot_lgrngn_prof_ensamble_compare.cpp  plot_lgrngn_series.cpp  plot_lgrngn_series_ensamble.cpp  plot_lgrngn_series_ensamble_compare.cpp  plot_lgrngn_spec.cpp
tests/fig_a/: calc.cpp  temp
tests/moist_thermal/: CMakeLists.txt  common.hpp  moist_thermal.cpp  moist_thermal_create_refdata.cpp  moist_thermal_diff.cpp  run_many_mt_to_generate_refdata.sh
tests/moist_thermal/creating_refdata/: CMakeLists.txt  README.md  moist_thermal_create_refdata.cpp  run_many_mt_to_generate_refdata.sh
tests/moist_thermal/refdata/: README.md  stats.txt  stats_blk_ens_1.txt  stats_ens_1000.txt  stats_ens_2.txt  stats_lgrngn_ens_1000.txt  stats_mpi_blk_ens_1.txt
tests/physics/: CMakeLists.txt  moist_thermal.cpp  moist_thermal_Clark_Grabowski_99.cpp
tests/unit/: .gitignore  2d.cpp  CMakeLists.txt  README  api_test.cpp  hash_dict_iles.txt  hash_dict_smg.txt  hash_dict_smgani.txt  unit_2d.cpp  unit_3d.cpp
tests/unit/refdata_iles/: hash_dict.txt
tests/unit/refdata_smg/: hash_dict.txt
(+53892 files in other folders)
