add_executable(calc calc.cpp)
add_test(calc calc ${CMAKE_BINARY_DIR})

find_package(HDF5 COMPONENTS CXX REQUIRED QUIET)
find_package(Boost COMPONENTS iostreams system filesystem REQUIRED)

foreach(micro lgrngn)
  add_executable(plot_${micro} plot_${micro}.cpp)
  add_test(plot_${micro} plot_${micro} ${CMAKE_BINARY_DIR})
  target_link_libraries(plot_${micro} ${HDF5_LIBRARIES})
  target_include_directories(plot_${micro} PUBLIC ${HDF5_INCLUDE_DIRS})
  target_link_libraries(plot_${micro} ${Boost_LIBRARIES})
  target_include_directories(plot_${micro} PUBLIC ${Boost_INCLUDE_DIRS})
endforeach()

#add_executable(plot_lgrngn_spec plot_lgrngn_spec.cpp)
#add_test(plot_lgrngn_spec plot_lgrngn_spec ${CMAKE_BINARY_DIR})
#target_link_libraries(plot_lgrngn_spec ${HDF5_LIBRARIES})
#target_include_directories(plot_lgrngn_spec PUBLIC ${HDF5_INCLUDE_DIRS})
#target_link_libraries(plot_lgrngn_spec ${Boost_LIBRARIES})
#target_include_directories(plot_lgrngn_spec PUBLIC ${Boost_INCLUDE_DIRS})

add_executable(plot_lgrngn_mean_spec plot_lgrngn_mean_spec.cpp)
#add_test(plot_lgrngn_mean_spec plot_lgrngn_mean_spec ${CMAKE_BINARY_DIR})
target_link_libraries(plot_lgrngn_mean_spec ${HDF5_LIBRARIES})
target_include_directories(plot_lgrngn_mean_spec PUBLIC ${HDF5_INCLUDE_DIRS})
target_link_libraries(plot_lgrngn_mean_spec ${Boost_LIBRARIES})
target_include_directories(plot_lgrngn_mean_spec PUBLIC ${Boost_INCLUDE_DIRS})

set(OUT_LGRNGN_DIR  ${CMAKE_BINARY_DIR}/tests/fig_a/)
add_executable(plot_lgrngn_prof plot_lgrngn_prof.cpp)
add_test(plot_lgrngn_prof plot_lgrngn_prof ${OUT_LGRNGN_DIR})
target_link_libraries(plot_lgrngn_prof ${HDF5_LIBRARIES})
target_include_directories(plot_lgrngn_prof PUBLIC ${HDF5_INCLUDE_DIRS})
target_link_libraries(plot_lgrngn_prof ${Boost_LIBRARIES})
target_include_directories(plot_lgrngn_prof PUBLIC ${Boost_INCLUDE_DIRS})

add_executable(plot_lgrngn_series plot_lgrngn_series.cpp)
add_test(plot_lgrngn_series plot_lgrngn_series ${OUT_LGRNGN_DIR})
target_link_libraries(plot_lgrngn_series ${HDF5_LIBRARIES})
target_include_directories(plot_lgrngn_series PUBLIC ${HDF5_INCLUDE_DIRS})
target_link_libraries(plot_lgrngn_series ${Boost_LIBRARIES})
target_include_directories(plot_lgrngn_series PUBLIC ${Boost_INCLUDE_DIRS})

add_executable(plot_lgrngn_prof_ensamble plot_lgrngn_prof_ensamble.cpp)
add_test(plot_lgrngn_prof_ensamble plot_lgrngn_prof_ensamble ${OUT_LGRNGN_DIR})
target_link_libraries(plot_lgrngn_prof_ensamble ${HDF5_LIBRARIES})
target_include_directories(plot_lgrngn_prof_ensamble PUBLIC ${HDF5_INCLUDE_DIRS})
target_link_libraries(plot_lgrngn_prof_ensamble ${Boost_LIBRARIES})
target_include_directories(plot_lgrngn_prof_ensamble PUBLIC ${Boost_INCLUDE_DIRS})

add_executable(plot_lgrngn_prof_ensamble_compare plot_lgrngn_prof_ensamble_compare.cpp)
add_test(plot_lgrngn_prof_ensamble_compare plot_lgrngn_prof_ensamble_compare ${OUT_LGRNGN_DIR})
target_link_libraries(plot_lgrngn_prof_ensamble_compare ${HDF5_LIBRARIES})
target_include_directories(plot_lgrngn_prof_ensamble_compare PUBLIC ${HDF5_INCLUDE_DIRS})
target_link_libraries(plot_lgrngn_prof_ensamble_compare ${Boost_LIBRARIES})
target_include_directories(plot_lgrngn_prof_ensamble_compare PUBLIC ${Boost_INCLUDE_DIRS})

add_executable(plot_lgrngn_series_ensamble plot_lgrngn_series_ensamble.cpp)
add_test(plot_lgrngn_series_ensamble plot_lgrngn_series_ensamble ${OUT_LGRNGN_DIR})
target_link_libraries(plot_lgrngn_series_ensamble ${HDF5_LIBRARIES})
target_include_directories(plot_lgrngn_series_ensamble PUBLIC ${HDF5_INCLUDE_DIRS})
target_link_libraries(plot_lgrngn_series_ensamble ${Boost_LIBRARIES})
target_include_directories(plot_lgrngn_series_ensamble PUBLIC ${Boost_INCLUDE_DIRS})

add_executable(plot_lgrngn_series_ensamble_compare plot_lgrngn_series_ensamble_compare.cpp)
add_test(plot_lgrngn_series_ensamble_compare plot_lgrngn_series_ensamble_compare ${OUT_LGRNGN_DIR})
target_link_libraries(plot_lgrngn_series_ensamble_compare ${HDF5_LIBRARIES})
target_include_directories(plot_lgrngn_series_ensamble_compare PUBLIC ${HDF5_INCLUDE_DIRS})
target_link_libraries(plot_lgrngn_series_ensamble_compare ${Boost_LIBRARIES})
target_include_directories(plot_lgrngn_series_ensamble_compare PUBLIC ${Boost_INCLUDE_DIRS})

