add_executable(moist_thermal_Clark_Grabowski_99 moist_thermal_Clark_Grabowski_99.cpp)
target_link_libraries(moist_thermal_Clark_Grabowski_99 ${HDF5_LIBRARIES})
target_include_directories(moist_thermal_Clark_Grabowski_99 PUBLIC ${HDF5_INCLUDE_DIRS})
add_test(moist_thermal_Clark_Grabowski_99 moist_thermal_Clark_Grabowski_99 ${CMAKE_BINARY_DIR})
